# GradingWebUI

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  logging.yaml  pyproject.toml
.github/workflows/: ci.yaml  docker-image.yaml  release.yaml
WebUI/: POST_PROCESSING_EXAMPLE.md  README.md
WebUI/docs/: architecture.md
WebUI/planning/: deployment-roadmap.md
docker/web-grading/: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml
lms_interface/: __init__.py  canvas_interface.py
scripts/: check_version_bump_vendoring.sh  git_bump.sh  lms_vendor_tooling.toml  migrate_db.py  validate_deploy_env.py  vendor_lms_interface.py
src/grading_web_ui/: __init__.py  ai_helper.py
src/grading_web_ui/lms_interface/: __init__.py  ai_helper.py  canvas_interface.py
src/grading_web_ui/web_api/: database.py  main.py  models.py  startup_config.py  workflow_locks.py
src/grading_web_ui/web_api/dtos/: exam.py
src/grading_web_ui/web_api/repositories/: __init__.py  feedback_tag_repository.py  problem_metadata_repository.py  problem_repository.py  problem_stats_repository.py  session_repository.py  subjective_triage_repository.py  submission_repository.py
src/grading_web_ui/web_api/routes/: ai_grader.py  alignment.py  auth.py  canvas.py  debug.py  finalize.py  matching.py  problems.py  sessions.py  uploads.py
src/grading_web_ui/web_api/services/: ai_grader.py  auth_service.py  exam_processor.py  feedback_text.py  finalizer.py  manual_alignment.py  problem_service.py  qr_scanner.py  quiz_encryption.py  quiz_regeneration.py  runtime_metrics.py
src/grading_web_ui/web_frontend/: index.html
src/grading_web_ui/web_frontend/css/: style.css
src/grading_web_ui/web_frontend/js/: ai_grading_notes.js  app.js  default_feedback.js  feedback_tags.js  grading.js  matching.js  review.js  user_management.js
tests/: test_ai_helper_anthropic.py  test_api.py  test_canvas_feedback_upload.py  test_database_migrations.py  test_exam_processor_matching.py  test_feedback_text.py  test_finalizer_feedback_dedup.py  test_quiz_encryption.py  test_quiz_regeneration.py  test_startup_config.py  test_upload_flows.py  test_workflow_locks.py
tests/integration/: test_bulk_upload.py
tests/repositories/: test_session_repository.py
